ЛР4 - сделал все

--- a/LR4/pom.xml
+++ b/LR4/pom.xml
@@ -25,6 +25,10 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+
+        </dependency>
     </dependencies>
 
 </project>
